--- a/ui/lobby/css/_table.scss
+++ b/ui/lobby/css/_table.scss
@@ -25,7 +25,7 @@
 
   &__counters {
     @extend %flex-between, %page-text;
-    margin-top: $block-gap / 2;
+    margin-top: 1rem;
     display: none;
 
     a {
